--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tanjila Hossain Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Peter Parker</span> World!</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae quod voluptatibus architecto, fugiat ex,
+                nemo numquam cupiditate accusantium unde rerum, natus et delectus accusamus! Eos praesentium beatae
+                similique totam ipsa.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/tanjilahossain/">HIRE ME</a>
+        </div>
+
+        <div class="half-width">
+            <img src="images/jhankar-pic-with-bg.png" alt=" JHanker mahbub's picture with Trophy">
+
+        </div>
+    </section>
 </body>
+
 </html>
