dream-big section added

--- a/index.html
+++ b/index.html
@@ -26,12 +26,30 @@
                 similique totam ipsa.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/tanjilahossain/">HIRE ME</a>
         </div>
-
         <div class="half-width">
             <img src="images/jhankar-pic-with-bg.png" alt=" JHanker mahbub's picture with Trophy">
+        </div>
+
+
+    </section>
+
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream Big</h2>
+            <h3>Become a web developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, neque a! Nulla et recusandae,
+                minima numquam ab sint aliquam magnam sequi dolore perferendis, natus quod unde officia est eaque vero.
+            </p>
+
+            <a class="link-button" target="_blank" href="https://github.com/TanjilaHossain/">DOWNLOAD RESUME</a>
 
         </div>
     </section>
+
 </body>
 
 </html>
