experience section added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
 
         <div class="half-width">
             <h1>Welcome To</h1>
@@ -26,7 +26,7 @@
                 similique totam ipsa.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/tanjilahossain/">HIRE ME</a>
         </div>
-        <div class="half-width">
+        <div class="half-width" style="padding:50px;">
             <img src="images/jhankar-pic-with-bg.png" alt=" JHanker mahbub's picture with Trophy">
         </div>
 
@@ -34,7 +34,7 @@
     </section>
 
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -47,6 +47,25 @@
 
             <a class="link-button" target="_blank" href="https://github.com/TanjilaHossain/">DOWNLOAD RESUME</a>
 
+        </div>
+    </section>
+    <section>
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div class="half-width">
+                <h1>Full Stack Web Developer</h1>
+                <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae vel nostrum reprehenderit enim
+                    odit praesentium vero unde, inventore, perspiciatis aspernatur voluptatum ea possimus, doloremque
+                    dolore ducimus ipsam accusantium. Tenetur, accusamus?</p>
+            </div>
+            <div class="half-width">
+                <h1>Baby Web Developer</h1>
+                <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae vel nostrum reprehenderit enim
+                    odit praesentium vero unde, inventore, perspiciatis aspernatur voluptatum ea possimus, doloremque
+                    dolore ducimus ipsam accusantium. Tenetur, accusamus?</p>
+            </div>
         </div>
     </section>
 
