--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
 
         </div>
     </section>
-    <section>
+    <section class="experience-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="half-width">
-                <h1>Full Stack Web Developer</h1>
+            <div id="full-stack" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
                 <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae vel nostrum reprehenderit enim
                     odit praesentium vero unde, inventore, perspiciatis aspernatur voluptatum ea possimus, doloremque
                     dolore ducimus ipsam accusantium. Tenetur, accusamus?</p>
             </div>
-            <div class="half-width">
-                <h1>Baby Web Developer</h1>
+            <div id="baby-web" class="experience-item">
+                <h2>Baby Web Developer</h2>
                 <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae vel nostrum reprehenderit enim
                     odit praesentium vero unde, inventore, perspiciatis aspernatur voluptatum ea possimus, doloremque
@@ -70,5 +70,8 @@
     </section>
 
 </body>
+<footer>
+    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+</footer>
 
 </html>
